[project]
name = "fichtelgebirge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "notebook>=7.4.7",
    "numpy>=2.3.5",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
